# RPG_MODDING_API

./: .cproject  .project  CMakeLists.txt
src/: ModdingAPI.cpp  TextureManager.cpp
